--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "customize-cra": "^1.0.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.0.24"
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
@@ -36,13 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "customize-cra": "^1.0.0",
-    "postcss": "^8.4.14",
-    "react-app-rewired": "^2.2.1",
-    "tailwindcss": "^3.0.24"
   }
 }
