--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.7",
     "babel-plugin-module-resolver": "^4.1.0",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
