add rule eslint and style guide airbnb

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,10 @@
       "module-resolver",
       {
         "alias": {
-          "@": "./src"
+          "@": "./src",
+          "@components": "./src/components",
+          "@utils": "./src/utils",
+          "@pages": "./src/pages"
         }
       }
     ]
